update changelog; 0.11.3 release

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,9 @@ Fixed:
 - Wrong planet phases as seen from more outer planets (LP: #803305)
 - Zoom in/out command sticks (LP: #712112)
 - Importing SSOs causes some strange effects (LP: #969211)
+- Not updated values of dimensions of CCD while changes telescopes (LP: #998726)
+- Gravity labels rendered incorrectly (LP: #998121)
+- Keyboard shortcut for subtract one sidereal year don't works (LP: #997873)
 
 0.11.2 [2012-03-10]
 The main theme of this version seems to be localization:
