--- a/po/stellarium/si.po
+++ b/po/stellarium/si.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-10 19:57+0700\n"
-"PO-Revision-Date: 2011-09-26 20:27+0000\n"
-"Last-Translator: අනුරාධ Jayathilaka <astroanu2004@yahoo.co.uk>\n"
+"PO-Revision-Date: 2012-05-19 19:08+0000\n"
+"Last-Translator: පසිඳු කාවින්ද <Unknown>\n"
 "Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-19 04:46+0000\n"
+"X-Launchpad-Export-Date: 2012-05-20 04:37+0000\n"
 "X-Generator: Launchpad (build 15259)\n"
 "X-Poedit-Country: SRI LANKA\n"
 "X-Poedit-Language: Estonian\n"
@@ -2592,11 +2592,11 @@ msgstr "උදව්"
 #: plugins/TimeZoneConfiguration/src/ui_timeZoneConfigurationWindow.h:408
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:313
 msgid "About"
-msgstr "මෘදුකාංගය පිළිබඳව"
+msgstr "පිළිබඳ"
 
 #: src/ui_helpDialogGui.h:269
 msgid "Log"
-msgstr "ලොගය"
+msgstr "ලඝු"
 
 #: src/ui_helpDialogGui.h:272
 msgid "Refresh"
