--- a/po/stellarium/bs.po
+++ b/po/stellarium/bs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-04 08:33+0000\n"
+"PO-Revision-Date: 2012-05-24 12:46+0000\n"
 "Last-Translator: Kenan Dervišević <kenan3008@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:46+0000\n"
+"X-Launchpad-Export-Date: 2012-05-25 04:37+0000\n"
 "X-Generator: Launchpad (build 15288)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -519,15 +519,15 @@ msgstr "Kada je pokrenuta skripta"
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "Zaustavi trenutno pokrenutu skriptu"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:151 src/gui/StelGui.cpp:152
 msgid "Pause script execution"
-msgstr ""
+msgstr "Pauziraj izvršavanje skripte"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:153
 msgid "Resume script execution"
-msgstr ""
+msgstr "Nastavi izvršavanje skripte"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:148
 msgid "Slow down the script execution rate"
@@ -5675,21 +5675,21 @@ msgstr "Baricentrički period: %1 s"
 #: plugins/Pulsars/src/Pulsar.cpp:143
 #, qt-format
 msgid "Time derivative of barycentric period: %1"
-msgstr ""
+msgstr "Vremenska derivacija baricentričnog perioda: %1"
 
 #: plugins/Pulsars/src/Pulsar.cpp:148
 msgid "Dispersion measure:"
-msgstr ""
+msgstr "Mjera disperzije:"
 
 #. TRANSLATORS: Unit of measure for distance - centimeters
 #: plugins/Pulsars/src/Pulsar.cpp:151
 msgid "cm"
-msgstr ""
+msgstr "cm"
 
 #. TRANSLATORS: Unit of measure for distance - parsecs
 #: plugins/Pulsars/src/Pulsar.cpp:154
 msgid "pc"
-msgstr ""
+msgstr "pc"
 
 #: plugins/Pulsars/src/Pulsar.cpp:160
 #, qt-format
@@ -5699,7 +5699,7 @@ msgstr ""
 #: plugins/Pulsars/src/Pulsar.cpp:164
 #, qt-format
 msgid "Binary period of pulsar: %1 days"
-msgstr ""
+msgstr "Binarni period pulsara: %1 dana"
 
 #: plugins/Pulsars/src/Pulsar.cpp:168
 #, qt-format
@@ -5710,12 +5710,12 @@ msgstr ""
 #: plugins/Pulsars/src/Pulsar.cpp:173
 #, qt-format
 msgid "Annual parallax: %1 mas"
-msgstr ""
+msgstr "Godišnja paralaksa: %1 mas"
 
 #: plugins/Pulsars/src/Pulsar.cpp:177
 #, qt-format
 msgid "Distance based on electron density model: %1 kpc (%2 ly)"
-msgstr ""
+msgstr "Udaljenost na osnovu modela gustine elektrona: %1 kpc (%2 ly)"
 
 #: plugins/Pulsars/src/Pulsar.cpp:181
 #, qt-format
@@ -5743,7 +5743,7 @@ msgstr "mJy"
 #: plugins/Pulsars/src/Pulsar.cpp:221
 #, qt-format
 msgid "Notes: %1"
-msgstr ""
+msgstr "Napomene: %1"
 
 #: plugins/Pulsars/src/Pulsar.cpp:283
 msgid ""
@@ -5752,7 +5752,7 @@ msgstr ""
 
 #: plugins/Pulsars/src/Pulsar.cpp:288
 msgid "has one or more binary companions"
-msgstr ""
+msgstr "ima jednog ili više binarnih pratilaca"
 
 #: plugins/Pulsars/src/Pulsar.cpp:293
 msgid "with pulsed emission from radio to infrared or higher frequencies"
