Launchpad automatic translations update.

--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-17 14:37+0000\n"
-"Last-Translator: xemard.nicolas <Unknown>\n"
+"PO-Revision-Date: 2012-05-26 05:56+0000\n"
+"Last-Translator: François Laurent <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:48+0000\n"
+"X-Launchpad-Export-Date: 2012-05-27 04:37+0000\n"
 "X-Generator: Launchpad (build 15288)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -173,7 +173,7 @@ msgstr "Phase : %1"
 #: src/core/modules/Planet.cpp:192
 #, qt-format
 msgid "Illuminated: %1%"
-msgstr "Luminosité :%1%"
+msgstr "Luminosité : %1%"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
