--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-13 22:01+0000\n"
+"PO-Revision-Date: 2012-05-26 23:54+0000\n"
 "Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:52+0000\n"
+"X-Launchpad-Export-Date: 2012-05-27 04:37+0000\n"
 "X-Generator: Launchpad (build 15288)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -530,15 +530,15 @@ msgstr "Podczas wykonywania skryptu"
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "Zakończ aktualnie uruchomiony skrypt"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:151 src/gui/StelGui.cpp:152
 msgid "Pause script execution"
-msgstr ""
+msgstr "Wstrzymaj działanie skryptu"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:153
 msgid "Resume script execution"
-msgstr ""
+msgstr "Wznów działanie skryptu"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:148
 msgid "Slow down the script execution rate"
@@ -666,7 +666,7 @@ msgstr "Tester: %1"
 
 #: src/gui/HelpDialog.cpp:312
 msgid "Past Developers"
-msgstr ""
+msgstr "Osoby, które w przeszłości tworzyły program"
 
 #: src/gui/HelpDialog.cpp:313
 msgid ""
