--- a/po/stellarium/tr.po
+++ b/po/stellarium/tr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-09 06:07+0000\n"
+"PO-Revision-Date: 2012-05-28 00:23+0000\n"
 "Last-Translator: kulkke <Unknown>\n"
 "Language-Team: <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:54+0000\n"
+"X-Launchpad-Export-Date: 2012-05-28 05:16+0000\n"
 "X-Generator: Launchpad (build 15288)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -5443,7 +5443,7 @@ msgstr "Güneş Sistemi cisimleri"
 
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:299
 msgid "Warning"
-msgstr "Dikkat"
+msgstr "Uyarı"
 
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:300
 msgid ""
