Launchpad automatic translations update.

--- a/po/stellarium-skycultures/ms.po
+++ b/po/stellarium-skycultures/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-28 02:31+0000\n"
+"PO-Revision-Date: 2012-05-28 05:37+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-28 05:16+0000\n"
-"X-Generator: Launchpad (build 15288)\n"
+"X-Launchpad-Export-Date: 2012-05-29 04:43+0000\n"
+"X-Generator: Launchpad (build 15316)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -390,7 +390,7 @@ msgstr "Pemegang Reins"
 
 #: skycultures/arabic/constellation_names.eng.fab:7
 msgid "The Howler"
-msgstr ""
+msgstr "Pelawak"
 
 #: skycultures/arabic/constellation_names.eng.fab:8
 msgid "The Crab"
@@ -803,7 +803,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:63
 msgid "The twins posterior head"
-msgstr ""
+msgstr "Kepala posterior kembar"
 
 #: skycultures/arabic/star_names.fab:64
 msgid "Suhayl hadar"
@@ -839,7 +839,7 @@ msgstr "Pemberat Suhayl"
 
 #: skycultures/arabic/star_names.fab:72
 msgid "The solitary one"
-msgstr ""
+msgstr "Yang bersendirian"
 
 #: skycultures/arabic/star_names.fab:73
 msgid "The glance of the lion"
@@ -855,7 +855,7 @@ msgstr "Hati singa"
 
 #: skycultures/arabic/star_names.fab:76
 msgid "The northern one of the second leap"
-msgstr ""
+msgstr "Lompatan kedua dari utara"
 
 #: skycultures/arabic/star_names.fab:77
 msgid "The forehead of the lion"
@@ -863,7 +863,7 @@ msgstr "Dahi singa"
 
 #: skycultures/arabic/star_names.fab:78
 msgid "The southern one of the second leap"
-msgstr ""
+msgstr "Lompatan kedua dari selatan"
 
 #: skycultures/arabic/star_names.fab:79
 msgid "The cup"
