--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-23 15:38+0000\n"
+"PO-Revision-Date: 2012-05-28 15:45+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:55+0000\n"
-"X-Generator: Launchpad (build 15288)\n"
+"X-Launchpad-Export-Date: 2012-05-29 04:43+0000\n"
+"X-Generator: Launchpad (build 15316)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -5709,12 +5709,12 @@ msgid ""
 "1993-2006 (2005) (astro-ph/0412641)).<br><br>Note: pulsar identifiers have "
 "the prefix 'PSR'"
 msgstr ""
-"<p align=\\\"justify\\\">Este complemento mostra a posição de vários "
-"pulsares e apresenta informações objetivas sobre cada um deles. Os dados "
-"sobre os pulsares provêm da obra “The ATNF Pulsar Catalogue” (Manchester, R. "
-"N., Hobbs, G. B., Teoh, A. & Hobbs, M., Astron. J., 129, 1993-2006 (2005) "
-"(astro-ph/0412641)).<br><br>Observação: os identificadores dos pulsares têm "
-"o prefixo “PSR”."
+"<p align=\"justify\">Este complemento mostra a posição de vários pulsares e "
+"apresenta informações objetivas sobre cada um deles. Os dados sobre os "
+"pulsares provêm da obra “The ATNF Pulsar Catalogue” (Manchester, R. N., "
+"Hobbs, G. B., Teoh, A. & Hobbs, M., Astron. J., 129, 1993-2006 (2005) (astro-"
+"ph/0412641)).<br><br>Observação: os identificadores dos pulsares têm o "
+"prefixo “PSR”."
 
 #: plugins/Pulsars/src/Pulsar.cpp:128
 msgid "pulsar"
