Launchpad automatic translations update.

--- a/po/stellarium-skycultures/ms.po
+++ b/po/stellarium-skycultures/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-28 05:37+0000\n"
+"PO-Revision-Date: 2012-05-30 01:22+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-29 04:43+0000\n"
+"X-Launchpad-Export-Date: 2012-05-30 05:18+0000\n"
 "X-Generator: Launchpad (build 15316)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -1152,7 +1152,7 @@ msgstr "Lutut pemanah"
 
 #: skycultures/arabic/star_names.fab:150
 msgid "The hen-bill"
-msgstr ""
+msgstr "Paruh ayam betina"
 
 #: skycultures/arabic/star_names.fab:151
 msgid "The arrow"
@@ -1571,7 +1571,7 @@ msgstr "Harungan"
 
 #: skycultures/chinese/constellation_names.eng.fab:26
 msgid "Seven Excellencies"
-msgstr ""
+msgstr "Tujuh Yang Berhormat"
 
 #: skycultures/chinese/constellation_names.eng.fab:27
 msgid "Market"
@@ -2183,11 +2183,11 @@ msgstr "Mengangin"
 
 #: skycultures/korean/constellation_names.eng.fab:41
 msgid "Outer Pestle"
-msgstr ""
+msgstr "Antan Luar"
 
 #: skycultures/korean/constellation_names.eng.fab:42
 msgid "Chaff"
-msgstr ""
+msgstr "Tatal"
 
 #: skycultures/korean/constellation_names.eng.fab:43
 msgid "Head of Town"
@@ -2195,39 +2195,39 @@ msgstr "Ketua Kampung"
 
 #: skycultures/korean/constellation_names.eng.fab:44
 msgid "Build"
-msgstr ""
+msgstr "Binaan"
 
 #: skycultures/korean/constellation_names.eng.fab:45
 msgid "Fowl of Sky"
-msgstr ""
+msgstr "Unggas Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:46
 msgid "Shrine of Sky"
-msgstr ""
+msgstr "Keramat Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:48
 msgid "Northeastern Nations"
-msgstr ""
+msgstr "Negari Timur Laut"
 
 #: skycultures/korean/constellation_names.eng.fab:49
 msgid "Old Farmer"
-msgstr ""
+msgstr "Petani Tua"
 
 #: skycultures/korean/constellation_names.eng.fab:50
 msgid "Snapping Turtle"
-msgstr ""
+msgstr "Kura-kura Menyentap"
 
 #: skycultures/korean/constellation_names.eng.fab:51
 msgid "Road for Emperor"
-msgstr ""
+msgstr "Jalan Maharaja"
 
 #: skycultures/korean/constellation_names.eng.fab:52
 msgid "The Weaver"
-msgstr ""
+msgstr "Penenun"
 
 #: skycultures/korean/constellation_names.eng.fab:53
 msgid "River adjoining Tower"
-msgstr ""
+msgstr "Sungai bersambung dengan Menara"
 
 #: skycultures/korean/constellation_names.eng.fab:55
 msgid "Drum of River"
@@ -2239,7 +2239,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:58
 msgid "Cow leading Man"
-msgstr ""
+msgstr "Lembu menuntun Lelaki"
 
 #: skycultures/korean/constellation_names.eng.fab:59
 msgid "Bank Spread"
@@ -2247,31 +2247,31 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:60
 msgid "Basket for Silkworm"
-msgstr ""
+msgstr "Sebakul Ulat Sutera"
 
 #: skycultures/korean/constellation_names.eng.fab:61
 msgid "Officer for Cart"
-msgstr ""
+msgstr "Pegawai Kereta Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:62
 msgid "Ferry of Sky"
-msgstr ""
+msgstr "Feri Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:63
 msgid "Fruit"
-msgstr ""
+msgstr "Buah-buahan"
 
 #: skycultures/korean/constellation_names.eng.fab:64
 msgid "Seed"
-msgstr ""
+msgstr "Benih"
 
 #: skycultures/korean/constellation_names.eng.fab:65
 msgid "Storage for Lady"
-msgstr ""
+msgstr "Tempat Simpanan Wanita"
 
 #: skycultures/korean/constellation_names.eng.fab:66
 msgid "Court Lady"
-msgstr ""
+msgstr "Istana Wanita"
 
 #: skycultures/korean/constellation_names.eng.fab:67
 msgid "Judge Fault"
@@ -2283,27 +2283,27 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:69
 msgid "Grant Life"
-msgstr ""
+msgstr "Diberi Nyawa"
 
 #: skycultures/korean/constellation_names.eng.fab:70
 msgid "Punish"
-msgstr ""
+msgstr "Hukum"
 
 #: skycultures/korean/constellation_names.eng.fab:71
 msgid "Empty House"
-msgstr ""
+msgstr "Rumah Kosong"
 
 #: skycultures/korean/constellation_names.eng.fab:72
 msgid "Weep"
-msgstr ""
+msgstr "Menangis"
 
 #: skycultures/korean/constellation_names.eng.fab:73
 msgid "Sob"
-msgstr ""
+msgstr "Teresak-esak"
 
 #: skycultures/korean/constellation_names.eng.fab:74
 msgid "Castle with Rampart"
-msgstr ""
+msgstr "Istana dengan Kubu"
 
 #: skycultures/korean/constellation_names.eng.fab:75
 msgid "Hook for Dress"
@@ -2311,27 +2311,27 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:76
 msgid "Groom"
-msgstr ""
+msgstr "Penjaga Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Office for Chariot"
-msgstr ""
+msgstr "Pegawai Kereta Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
-msgstr ""
+msgstr "Manusia"
 
 #: skycultures/korean/constellation_names.eng.fab:79
 msgid "Inner Pestle"
-msgstr ""
+msgstr "Antan Dalaman"
 
 #: skycultures/korean/constellation_names.eng.fab:81
 msgid "Warehouse of Sky"
-msgstr ""
+msgstr "Gudang Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:82
 msgid "Tomb"
-msgstr ""
+msgstr "Kubur"
 
 #: skycultures/korean/constellation_names.eng.fab:83
 msgid "Cover of House"
@@ -2339,23 +2339,23 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:84
 msgid "Broken Mortar"
-msgstr ""
+msgstr "Meriam Rosak"
 
 #: skycultures/korean/constellation_names.eng.fab:85
 msgid "Climbing Serpent"
-msgstr ""
+msgstr "Ular yang Mendaki"
 
 #: skycultures/korean/constellation_names.eng.fab:86
 msgid "Palace of Emperor"
-msgstr ""
+msgstr "Istana Maharaja"
 
 #: skycultures/korean/constellation_names.eng.fab:87
 msgid "Detached Palace"
-msgstr ""
+msgstr "Istana Terasing"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Ofice for Construction"
-msgstr ""
+msgstr "Pejabat Pembinaan"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2363,11 +2363,11 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:90
 msgid "Rampart"
-msgstr ""
+msgstr "Kubu"
 
 #: skycultures/korean/constellation_names.eng.fab:91
 msgid "Troops of Sky"
-msgstr ""
+msgstr "Askar Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:92
 msgid "Village for Patrol"
@@ -2375,52 +2375,52 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:93
 msgid "Net of Sky"
-msgstr ""
+msgstr "Jaring Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:94
 msgid "Stable of Sky"
-msgstr ""
+msgstr "Kandang Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:95
 msgid "Eastern Wall"
-msgstr ""
+msgstr "Dinding Timur"
 
 #: skycultures/korean/constellation_names.eng.fab:96
 #: skycultures/korean/constellation_names.eng.fab:195
 msgid "Civil Engineer"
-msgstr ""
+msgstr "Jurutera Awam"
 
 #: skycultures/korean/constellation_names.eng.fab:97
 msgid "Thunderbolts"
-msgstr ""
+msgstr "Petir"
 
 #: skycultures/korean/constellation_names.eng.fab:98
 msgid "Clouds and Rain"
-msgstr ""
+msgstr "Awan dan Hujan"
 
 #: skycultures/korean/constellation_names.eng.fab:99
 msgid "Highway"
-msgstr ""
+msgstr "Lebuhraya"
 
 #: skycultures/korean/constellation_names.eng.fab:100
 msgid "Whip"
-msgstr ""
+msgstr "Cemeti"
 
 #: skycultures/korean/constellation_names.eng.fab:101
 msgid "Officer for Chariot of"
-msgstr ""
+msgstr "Pegawai Kereta Berkuda"
 
 #: skycultures/korean/constellation_names.eng.fab:102
 msgid "Side Road"
-msgstr ""
+msgstr "Tepi Jalan"
 
 #: skycultures/korean/constellation_names.eng.fab:103
 msgid "Armory"
-msgstr ""
+msgstr "Gedung Senjata"
 
 #: skycultures/korean/constellation_names.eng.fab:104
 msgid "Southern Gate of Emperator"
-msgstr ""
+msgstr "Pintu Pagar Timur Emperator"
 
 #: skycultures/korean/constellation_names.eng.fab:105
 msgid "Outer Folding Screen"
@@ -2428,81 +2428,81 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:106
 msgid "Toilet of Sky"
-msgstr ""
+msgstr "Tandas Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:107
 msgid "Architect"
-msgstr ""
+msgstr "Arkitek"
 
 #: skycultures/korean/constellation_names.eng.fab:108
 msgid "Emperator"
-msgstr ""
+msgstr "Emperator"
 
 #: skycultures/korean/constellation_names.eng.fab:109
 msgid "Watchtower"
-msgstr ""
+msgstr "Menara Pengawal"
 
 #: skycultures/korean/constellation_names.eng.fab:110
 msgid "Left Elm"
-msgstr ""
+msgstr "Elm Kiri"
 
 #: skycultures/korean/constellation_names.eng.fab:111
 msgid "Right Elm"
-msgstr ""
+msgstr "Elm Kanan"
 
 #: skycultures/korean/constellation_names.eng.fab:112
 msgid "Storehouse of Sky"
-msgstr ""
+msgstr "Gudang Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:113
 msgid "Stack of Cereals"
-msgstr ""
+msgstr "Tindanan Bijirin"
 
 #: skycultures/korean/constellation_names.eng.fab:114
 msgid "Ship of Sky"
-msgstr ""
+msgstr "Kapal Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:115
 #: skycultures/korean/constellation_names.eng.fab:157
 msgid "Store of Water"
-msgstr ""
+msgstr "Simpanan Air"
 
 #: skycultures/korean/constellation_names.eng.fab:117
 msgid "Heap of Corpse"
-msgstr ""
+msgstr "Timbunan Mayat"
 
 #: skycultures/korean/constellation_names.eng.fab:118
 msgid "Stomach of Tiger"
-msgstr ""
+msgstr "Perut Harimau"
 
 #: skycultures/korean/constellation_names.eng.fab:119
 msgid "Store of Millet for"
-msgstr ""
+msgstr "Simpanan Milet"
 
 #: skycultures/korean/constellation_names.eng.fab:120
 msgid "Storehouse for Cereals"
-msgstr ""
+msgstr "Gudang Bijirin"
 
 #: skycultures/korean/constellation_names.eng.fab:121
 msgid "Whetstone"
-msgstr ""
+msgstr "Batu Asah"
 
 #: skycultures/korean/constellation_names.eng.fab:123
 msgid "Shaman of Sky"
-msgstr ""
+msgstr "Bomoh Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:124
 msgid "Ear and Eye of"
-msgstr ""
+msgstr "Mata dan Telinga"
 
 #: skycultures/korean/constellation_names.eng.fab:125
 msgid "Moon"
-msgstr ""
+msgstr "Bulan"
 
 #: skycultures/korean/constellation_names.eng.fab:126
 #: skycultures/korean/constellation_names.eng.fab:129
 msgid "Hill of Sky"
-msgstr ""
+msgstr "Bukit Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:127
 msgid "Conspiracy of Sky"
@@ -2510,33 +2510,33 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:128
 msgid "Fodder"
-msgstr ""
+msgstr "Makanan Haiwan"
 
 #: skycultures/korean/constellation_names.eng.fab:130
 msgid "Garage for Chariot"
-msgstr ""
+msgstr "Garaj Kereta Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:131
 msgid "Pond for Fish"
-msgstr ""
+msgstr "Kolam Ikan"
 
 #: skycultures/korean/constellation_names.eng.fab:132
 #: skycultures/korean/constellation_names.eng.fab:133
 #: skycultures/korean/constellation_names.eng.fab:134
 msgid "Pillar"
-msgstr ""
+msgstr "Tiang"
 
 #: skycultures/korean/constellation_names.eng.fab:135
 msgid "Puddle of Sky"
-msgstr ""
+msgstr "Lopak Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:136
 msgid "Kings"
-msgstr ""
+msgstr "Raja"
 
 #: skycultures/korean/constellation_names.eng.fab:137
 msgid "Gateway of Sky"
-msgstr ""
+msgstr "Pintu Laluan Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:138
 msgid "Flage of Saam"
@@ -2544,7 +2544,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:139
 msgid "Village of Sky"
-msgstr ""
+msgstr "Kampung Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:140
 msgid "Belvedere of Sky"
@@ -2552,7 +2552,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:141
 msgid "General of Border"
-msgstr ""
+msgstr "Jeneral Sempadan"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Cerficate of Sky"
@@ -2560,15 +2560,15 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
-msgstr ""
+msgstr "Bendera Maharaja"
 
 #: skycultures/korean/constellation_names.eng.fab:144
 msgid "Nine Territory"
-msgstr ""
+msgstr "Sembilan Wilayah"
 
 #: skycultures/korean/constellation_names.eng.fab:145
 msgid "Garden of Sky"
-msgstr ""
+msgstr "Kebun Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:146
 msgid "Settled Flag"
@@ -2584,7 +2584,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:149
 msgid "Saam"
-msgstr ""
+msgstr "Saam"
 
 #: skycultures/korean/constellation_names.eng.fab:150
 msgid "Expeditionary Force"
@@ -2592,11 +2592,11 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:151
 msgid "Well for Millitary"
-msgstr ""
+msgstr "Perigi Tentera"
 
 #: skycultures/korean/constellation_names.eng.fab:152
 msgid "Well of Jade"
-msgstr ""
+msgstr "Perigi Jed"
 
 #: skycultures/korean/constellation_names.eng.fab:153
 #: skycultures/korean/constellation_names.eng.fab:208
@@ -2605,7 +2605,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:155
 msgid "Arrow"
-msgstr ""
+msgstr "Anak Panah"
 
 #: skycultures/korean/constellation_names.eng.fab:156
 msgid "Piled Brushwood"
@@ -2613,7 +2613,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:158
 msgid "Northern River"
-msgstr ""
+msgstr "Sungai Utara"
 
 #: skycultures/korean/constellation_names.eng.fab:159
 msgid "Five Lords"
@@ -2621,19 +2621,19 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:160
 msgid "Wine Glass of Sky"
-msgstr ""
+msgstr "Gelas Arak Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:161
 msgid "Eastern Well"
-msgstr ""
+msgstr "Perigi Timur"
 
 #: skycultures/korean/constellation_names.eng.fab:162
 msgid "Flood control"
-msgstr ""
+msgstr "Kawalan Banjir"
 
 #: skycultures/korean/constellation_names.eng.fab:163
 msgid "Balance of Water"
-msgstr ""
+msgstr "Kesimbangan Air"
 
 #: skycultures/korean/constellation_names.eng.fab:164
 msgid "Four Spirit of River"
@@ -2641,7 +2641,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:165
 msgid "Southern River"
-msgstr ""
+msgstr "Sungai Selatan"
 
 #: skycultures/korean/constellation_names.eng.fab:166
 msgid "Twin Gate"
@@ -2649,7 +2649,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:167
 msgid "Bow"
-msgstr ""
+msgstr "Busur"
 
 #: skycultures/korean/constellation_names.eng.fab:168
 msgid "Star of Wolf"
@@ -2657,7 +2657,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:169
 msgid "Wild Fowls"
-msgstr ""
+msgstr "Unggas Liar"
 
 #: skycultures/korean/constellation_names.eng.fab:170
 msgid "Market for Army"
