--- a/po/stellarium/ar.po
+++ b/po/stellarium/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-17 22:53+0000\n"
+"PO-Revision-Date: 2012-05-29 16:53+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:45+0000\n"
-"X-Generator: Launchpad (build 15288)\n"
+"X-Launchpad-Export-Date: 2012-05-30 05:18+0000\n"
+"X-Generator: Launchpad (build 15316)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -518,15 +518,15 @@ msgstr "في حالة تنفيذ برنامج نصي (سكريبت)‏"
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "أوقف تنفيذ السكريبت الحالي"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:151 src/gui/StelGui.cpp:152
 msgid "Pause script execution"
-msgstr ""
+msgstr "جمِّد تنفيذ السكريبت"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:153
 msgid "Resume script execution"
-msgstr ""
+msgstr "استأنِف تنفيذ السكريبت"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:148
 msgid "Slow down the script execution rate"
@@ -4016,11 +4016,11 @@ msgstr ""
 #: plugins/Satellites/src/Satellite.cpp:230
 #: plugins/Satellites/src/Satellite.cpp:234
 msgid "Catalog #"
-msgstr "الدليل رقم"
+msgstr "‎رقم الدليل‎"
 
 #: plugins/Satellites/src/Satellite.cpp:236
 msgid "International Designator"
-msgstr "التصنيف العالمي"
+msgstr "‎التصنيف العالمي‎"
 
 #. TRANSLATORS: Slant range: distance between the satellite and the observer
 #: plugins/Satellites/src/Satellite.cpp:248
@@ -5635,6 +5635,11 @@ msgid ""
 "1993-2006 (2005) (astro-ph/0412641)).<br><br>Note: pulsar identifiers have "
 "the prefix 'PSR'"
 msgstr ""
+"<P DIR=RTL>هذه الإضافة ترسم مواقع عدة نجوم نابضة Pulsar ، وتوفير معلومات عن "
+"كل منها. بيانات النجوم النابضة مستقاة من 'The ATNF Pulsar Catalogue'  "
+"(Manchester, R. N., Hobbs, G. B., Teoh, A. & Hobbs, M., Astron. J., 129, "
+"1993-2006 (2005) (astro-ph/0412641)). <br><br> لاحظ أن النجوم النابضة يبدأ "
+"اسمها ب \"PSR\""
 
 #: plugins/Pulsars/src/Pulsar.cpp:128
 msgid "pulsar"
@@ -5649,47 +5654,49 @@ msgstr "‎دورة المركز الكتلي‎:%1 ثانية"
 #: plugins/Pulsars/src/Pulsar.cpp:143
 #, qt-format
 msgid "Time derivative of barycentric period: %1"
-msgstr ""
+msgstr "‎الوقت المشتق من دورة المركز الكتلي‎: %1"
 
 #: plugins/Pulsars/src/Pulsar.cpp:148
 msgid "Dispersion measure:"
-msgstr ""
+msgstr "‎مقياس التشتت‎:"
 
 #. TRANSLATORS: Unit of measure for distance - centimeters
 #: plugins/Pulsars/src/Pulsar.cpp:151
 msgid "cm"
-msgstr ""
+msgstr "سم"
 
 #. TRANSLATORS: Unit of measure for distance - parsecs
 #: plugins/Pulsars/src/Pulsar.cpp:154
 msgid "pc"
-msgstr ""
+msgstr "فرسخ نجمي"
 
 #: plugins/Pulsars/src/Pulsar.cpp:160
 #, qt-format
 msgid "Spin down energy loss rate: %1 ergs/s"
-msgstr ""
+msgstr "‎معدّل فقدان طاقة سرعة الدوران التنازلية‎: %1 ‎ إرج في الثانية"
 
 #: plugins/Pulsars/src/Pulsar.cpp:164
 #, qt-format
 msgid "Binary period of pulsar: %1 days"
-msgstr ""
+msgstr "‎الدرة الثنائية للنجم النابض‎: %1‎ يوم"
 
 #: plugins/Pulsars/src/Pulsar.cpp:168
 #, qt-format
 msgid "Eccentricity: %1"
-msgstr ""
+msgstr "‎اختلاف المركز‎: %1"
 
 #. TRANSLATORS: Unit of measure for annual parallax - milliarcseconds
 #: plugins/Pulsars/src/Pulsar.cpp:173
 #, qt-format
 msgid "Annual parallax: %1 mas"
-msgstr ""
+msgstr "‎اختلاف المنظر السنوي‎: %1‎ ميللي ثانية قوسية"
 
 #: plugins/Pulsars/src/Pulsar.cpp:177
 #, qt-format
 msgid "Distance based on electron density model: %1 kpc (%2 ly)"
 msgstr ""
+"‎المسافة بالاعتماد على نموذج كثافة الإلكترون‎: %1 ‎ كيلو فرسخ نجمي ‎ (%2‎ "
+"سنة ضوئية ‎)"
 
 #: plugins/Pulsars/src/Pulsar.cpp:181
 #, qt-format
@@ -5717,38 +5724,42 @@ msgstr "mJy"
 #: plugins/Pulsars/src/Pulsar.cpp:221
 #, qt-format
 msgid "Notes: %1"
-msgstr ""
+msgstr "‎ملاحظات‎: %1"
 
 #: plugins/Pulsars/src/Pulsar.cpp:283
 msgid ""
 "anomalous X-ray pulsar or soft gamma-ray repeater with detected pulsations"
-msgstr ""
+msgstr "نجم نابض شاذ ذو أشعة سينية أو مردّد أشعة جاما ضعيفة مع نبضات مكتشفة"
 
 #: plugins/Pulsars/src/Pulsar.cpp:288
 msgid "has one or more binary companions"
-msgstr ""
+msgstr "لديه مرافق ثنائي أو أكثر"
 
 #: plugins/Pulsars/src/Pulsar.cpp:293
 msgid "with pulsed emission from radio to infrared or higher frequencies"
 msgstr ""
+"مع إشعاعات نابضة في نطاق الموجات الراديوية وماتحت الحمراء أو الترددات الأعلى"
 
 #: plugins/Pulsars/src/Pulsar.cpp:298
 msgid "with pulsed emission only at infrared or higher frequencies"
 msgstr ""
+"مع إشعاعات نابضة في نطاق الموجات ماتحت الحمراء أو الترددات الأعلى فقط"
 
 #: plugins/Pulsars/src/Pulsar.cpp:303
 msgid "with pulsed emission in the radio band"
-msgstr ""
+msgstr "مع إشعاعات نابضة في نطاق الموجات الراديوية"
 
 #: plugins/Pulsars/src/Pulsar.cpp:308
 msgid "with intermittently pulsed radio emission"
-msgstr ""
+msgstr "مع إشعاعات نابضة متقطعة في نطاق الموجات الراديوية"
 
 #: plugins/Pulsars/src/Pulsar.cpp:313
 msgid ""
 "isolated neutron star with pulsed thermal X-ray emission but no detectable "
 "radio emission"
 msgstr ""
+"نجم نيوتروني منعزل مع انبعاث أشعة سينية حرارية ولكن من دون انبعاث موجات "
+"راديوية محسوسة"
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "الشبكة الاستوائية"
