--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-04-26 14:13+0000\n"
-"Last-Translator: Allen Zhong <Unknown>\n"
+"PO-Revision-Date: 2012-05-31 09:34+0000\n"
+"Last-Translator: Eye Of Ice <mydzh@126.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-24 10:55+0000\n"
-"X-Generator: Launchpad (build 15288)\n"
+"X-Launchpad-Export-Date: 2012-06-01 05:12+0000\n"
+"X-Generator: Launchpad (build 15342)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -39,11 +39,11 @@ msgstr "银道面"
 
 #: src/core/modules/LandscapeMgr.cpp:495
 msgid "Author: "
-msgstr "作者: "
+msgstr "作者： "
 
 #: src/core/modules/LandscapeMgr.cpp:498
 msgid "Location: "
-msgstr "位置: "
+msgstr "位置： "
 
 #: src/core/modules/LandscapeMgr.cpp:503
 #, qt-format
