--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-06-02 19:06+0700\n"
+"POT-Creation-Date: 2012-06-02 19:32+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5691,7 +5691,7 @@ msgid "Pulsars is updated"
 msgstr ""
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:252
-msgid "Exoplanets Configuration"
+msgid "Pulsars Configuration"
 msgstr ""
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:253
@@ -5699,7 +5699,7 @@ msgid "Pulsars Plug-in Configuration"
 msgstr ""
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:255
-msgid "Update pulsars data from Internet"
+msgid "Update catalog from Internet"
 msgstr ""
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:259
